--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Vue.js • TodoMVC</title>
-		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
+		<link rel="stylesheet" href="index.css">
 		<style> [v-cloak] { display: none; } </style>
 	</head>
 	<body>
@@ -73,11 +73,11 @@
 
 		<script src="vue.min.js"></script>
 		<script>metrics.afterLoad = now()</script>
-		<script src="node_modules/director/build/director.js"></script>
-		<script src="js/store.js"></script>
+		<script src="director.js"></script>
+		<script src="store.js"></script>
 		<script>metrics.beforeRender = now()</script>
-		<script src="js/app.js"></script>
-		<script src="js/routes.js"></script>
+		<script src="app.js"></script>
+		<script src="routes.js"></script>
 		<script>metrics.afterRender = now()</script>
 		<script src="perf.js"></script>
 	</body>
